2011-10-04  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/detect.c (urj_tap_detect_parts): Ignore search path when
    call urj_parse_include.

2011-10-03  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/cable/ice100.c (ice_read_hex_file): Free input_line
    before return.

2011-09-29  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/cable/generic_usbconn_list.h (ice100Bw): Add.
  * src/tap/cable/ice100.c: Rename ice100B to ice100Bw and
    add a new ice100B with PID 0x1225.

2011-09-27  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/cable.c (urj_tap_cable_start): Use urj_tap_trst_reset.
  * src/tap/discovery.c (jtag_reset): Remove.
    (urj_tap_discovery): Replace jtag_reset with urj_tap_trst_reset.
  * src/tap/tap.c (urj_tap_trst_reset): New function.
  * src/tap/idcode.c (urj_tap_idcode): Use urj_tap_trst_reset.
  * include/urjtag/tap.h (urj_tap_trst_reset): Declare.

2011-09-27  Jie Zhang  <jie.zhang@analog.com>

  * src/cmd/cmd_print.c (cmd_print_run): Pass active part to
    urj_part_parts_print.
  * src/part/part.c (urj_part_parts_print): Add a new argument
    for active part.
  * include/urjtag/part.h (urj_part_parts_print): Update declaration.

2011-09-24  Jie Zhang  <jie.zhang@analog.com>

  * src/bus/blackfin.c (bfin_bus_write): Pull AOE low for write.

2011-09-24  Jie Zhang  <jie.zhang@analog.com>

  * src/bus/blackfin.c (bfin_bus_new): Parse default params into a
    separate param list.

2011-09-06  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/mpc8313.c: Use global revbits rather than local, and fix
    off-by-one error by Márton Miklós.

2011-08-31  Jie Zhang  <jie.zhang@analog.com>

  * src/bus/blackfin.c (bfin_bus_new): Add new argument for default
    parameter values.  Update all callers.
  * src/bus/blackfin.h (bfin_bus_new): Update declaration.
    (bfin_bus_default_t): Typedef.
  * src/bus/bf537_stamp.c (bf537_stamp_defaults[]): New.
    (bf537_stamp_bus_new): Pass bf537_stamp_defaults to bfin_bus_new.
    (bf527_sdp): _BFIN_BUS_DECLARE.